<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/restaurant_details"
        android:gravity="center"
        android:textSize="25sp"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:weightSum="2"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/nameTxt"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:visibility="invisible"
            android:text="@string/restaurant"
            android:textSize="15dp"
            android:textStyle="bold"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/nameVal"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginLeft="10dp"
            android:textSize="15dp"
            android:textStyle="bold"
            android:layout_weight="1"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:weightSum="2"
        android:orientation="horizontal">
    <TextView
        android:id="@+id/descriptionTxt"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:visibility="invisible"
        android:textSize="15dp"
        android:textStyle="bold"
        android:text="@string/description"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/descriptionVal"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="15dp"
        android:textStyle="bold"
        android:layout_marginLeft="10dp"
        android:layout_weight="1"
        />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:weightSum="2"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/ratingTxt"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:gravity="center"
            android:text="@string/rating"
            android:textSize="15dp"
            android:textStyle="bold"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/ratingVal"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="15dp"
            android:textStyle="bold"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:weightSum="2"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/phoneTxt"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:gravity="center"
            android:textSize="15dp"
            android:textStyle="bold"
            android:text="@string/phone"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/phoneVal"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="15dp"
            android:textStyle="bold"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            />
    </LinearLayout>
</LinearLayout>